--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf8">
 	<script type="text/javascript" charset="UTF-8" src="js/p12e.js"></script>	
   <script type="text/javascript" charset="UTF-8" src="js/fun.js"></script>	
+  <link rel="stylesheet" type="text/css" href="css/mani.css">
   </head>
   <body>
     <p>Šeit ir teksts kontrolei</p>
@@ -18,5 +19,16 @@
     <div id="rez">
       <p id="re2">Šeit jābūt rezultātam</p>
     </div>
+
+	<DIV ID="ID_ANIMATION">
+		<pre ID="ID_ANIMATE">
+		<!-- Iekšējais logs pārvietojas attiecībā pret ārējo-->
+			Skrienosa rinda. Var ievietot jebkadus objektus. 
+			Saite: <a href="http://rvvg.lv">RVVG</a>. 
+			Atteli: <img src="img/s_03.png">
+		</pre>
+	</DIV>
+  <!-- Ja šo scriptu ievieto head daļā, tad nedarbojas-->
+  <script type="text/javascript" charset="utf8" src="js/mani.js"></script>
   </body>
 </html>
